--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="qr-container">
     <div class="qr-img">
-      <img src="./images/image-qr-code.png" alt="qr-code">
+      <img src="image-qr-code.png" alt="qr-code">
       <h3>Improve your front-end skills by building projects</h3>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
