Add some comment lines

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 </head>
 <body>
-  <div class="qr-container">
+  <!-- create a container -->
+  <div class="qr-container"> 
     <div class="qr-img">
       <img src="image-qr-code.png" alt="qr-code">
       <h3>Improve your front-end skills by building projects</h3>
